k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: briefly
  labels:
    app.kubernetes.io/part-of: briefly
